add_subdirectory(libcss)
add_subdirectory(libdom)
add_subdirectory(libhubbub)
add_subdirectory(libnsbmp)
add_subdirectory(libnsgif)
#add_subdirectory(libnslog)
add_subdirectory(libnspsl)
add_subdirectory(libnsutils)
add_subdirectory(libparserutils)
add_subdirectory(libsvgtiny)
add_subdirectory(libwapcaplet)
# nsgenbind is built separately
