libneosurf_src = files(
  'content/llcache.c',
  'content/fs_backing_store.c',
  'content/fetchers/curl.c',
  'content/fetchers/data.c',
  'content/fetchers/resource.c',
  'content/fetchers/about/config.c',
  'content/fetchers/about/query_privacy.c',
  'content/fetchers/about/chart.c',
  'content/fetchers/about/about.c',
  'content/fetchers/about/nscolours.c',
  'content/fetchers/about/certificate.c',
  'content/fetchers/about/query_fetcherror.c',
  'content/fetchers/about/query.c',
  'content/fetchers/about/query_auth.c',
  'content/fetchers/about/blank.c',
  'content/fetchers/about/imagecache.c',
  'content/fetchers/about/query_timeout.c',
  'content/fetchers/file/file.c',
  'content/fetchers/file/dirlist.c',
  'content/no_backing_store.c',
  'content/hlcache.c',
  'content/content_factory.c',
  'content/mimesniff.c',
  'content/content.c',
  'content/handlers/image/image_cache.c',
  'content/handlers/image/gif.c',
  'content/handlers/image/webp.c',
  'content/handlers/image/jpeg.c',
  'content/handlers/image/ico.c',
  'content/handlers/image/video.c',
  'content/handlers/image/bmp.c',
  'content/handlers/image/svg.c',
  'content/handlers/image/png.c',
  'content/handlers/image/image.c',
  'content/handlers/text/textplain.c',
  'content/handlers/javascript/duktape/dukky.c',
  'content/handlers/javascript/duktape/duktape.c',
  'content/handlers/javascript/fetcher.c',
  'content/handlers/javascript/content.c',
  'content/handlers/css/css.c',
  'content/handlers/css/internal.c',
  'content/handlers/css/dump.c',
  'content/handlers/css/select.c',
  'content/handlers/css/hints.c',
  'content/handlers/html/box_textarea.c',
  'content/handlers/html/object.c',
  'content/handlers/html/box_special.c',
  'content/handlers/html/table.c',
  'content/handlers/html/redraw.c',
  'content/handlers/html/dom_event.c',
  'content/handlers/html/css.c',
  'content/handlers/html/box_manipulate.c',
  'content/handlers/html/css_fetcher.c',
  'content/handlers/html/layout.c',
  'content/handlers/html/form.c',
  'content/handlers/html/layout_flex.c',
  'content/handlers/html/font.c',
  'content/handlers/html/imagemap.c',
  'content/handlers/html/box_construct.c',
  'content/handlers/html/script.c',
  'content/handlers/html/interaction.c',
  'content/handlers/html/html.c',
  'content/handlers/html/redraw_border.c',
  'content/handlers/html/box_inspect.c',
  'content/handlers/html/box_normalise.c',
  'content/handlers/html/forms.c',
  'content/handlers/html/textselection.c',
  'content/textsearch.c',
  'content/fetch.c',
  'content/urldb.c',
  'desktop/knockout.c',
  'desktop/hotlist.c',
  'desktop/save_pdf.c',
  'desktop/selection.c',
  'desktop/gui_factory.c',
  'desktop/search.c',
  'desktop/textinput.c',
  'desktop/save_complete.c',
  'desktop/print.c',
  'desktop/browser_window.c',
  'desktop/treeview.c',
  'desktop/neosurf.c',
  'desktop/local_history.c',
  'desktop/cookie_manager.c',
  'desktop/cw_helper.c',
  'desktop/page-info.c',
  'desktop/frames.c',
  'desktop/scrollbar.c',
  'desktop/download.c',
  'desktop/textarea.c',
  'desktop/bitmap.c',
  'desktop/version.c',
  'desktop/searchweb.c',
  'desktop/system_colour.c',
  'desktop/plot_style.c',
  'desktop/browser_history.c',
  'desktop/global_history.c',
  'desktop/save_text.c',
  'desktop/browser.c',
  'utils/useragent.c',
  'utils/punycode.c',
  'utils/ssl_certs.c',
  'utils/log.c',
  'utils/http/generics.c',
  'utils/http/content-disposition.c',
  'utils/http/parameter.c',
  'utils/http/content-type.c',
  'utils/http/primitives.c',
  'utils/http/cache-control.c',
  'utils/http/strict-transport-security.c',
  'utils/messages.c',
  'utils/nscolour.c',
  'utils/file.c',
  'utils/url.c',
  'utils/utf8.c',
  'utils/hashtable.c',
  'utils/nsurl/parse.c',
  'utils/nsurl/nsurl.c',
  'utils/nsoption.c',
  'utils/time.c',
  'utils/bloom.c',
  'utils/utils.c',
  'utils/idna.c',
  'utils/talloc.c',
  'utils/corestrings.c',
  'utils/libdom.c',
  'utils/filepath.c',
  'utils/hashmap.c'
)

library('neosurf', libneosurf_src)
